--- a/first/src/app/contact-us/contact-us.component.html
+++ b/first/src/app/contact-us/contact-us.component.html
@@ -5,7 +5,7 @@
             <div class="form-group">
                 <label for="firstname" class="form-label">FirstName</label>
                 <input type="text" class="form-control" placeholder="Name" id="firstname" name="firstname"
-                    formControlName="firstname"  ngModel required/>
+                    formControlName="firstname" />
                 <span class="error-msg" *ngIf="
             contact.get('firstname')?.errors &&
             contact.get('firstname')?.touched
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label for="lastname" class="form-label">LastName</label>
                 <input type="text" class="form-control" placeholder="Surname" id="lastname" name="lastname"
-                    formControlName="lastname" ngModel required />
+                    formControlName="lastname"  />
                 <span class="error-msg" *ngIf="
             contact.get('lastname')?.errors && contact.get('lastname')?.touched
           ">This is required</span>
@@ -23,26 +23,25 @@
             <div class="form-group">
                 <label for="email" class="form-label">Email address </label>
                 <input type="email" class="form-control" placeholder="eg. abc@gmail.com" id="email" name="email"
-                    aria-describedby="emailHelp" required formControlName="email" ngModel required />
+                    aria-describedby="emailHelp" required formControlName="email" />
                 <span class="error-msg" *ngIf="contact.get('email')?.errors && contact.get('email')?.touched">This is
                     required
                 </span>
             </div>
             <div class="form-group">
                 <label for="comment" class="form-label">Comment:</label>
-                <textarea class="form-control" rows="2" id="comment" name="comment" formControlName="comment" ngModel
-                    required>
+                <textarea class="form-control" rows="2" id="comment" name="comment" formControlName="comment" >
         </textarea>
                 <span class="error-msg" *ngIf="
             contact.get('comment')?.errors && contact.get('comment')?.touched
           ">This is required
                 </span>
             </div>
-            <button type="submit" (click)="onSubmit()" class="btn btn-primary col-lg-12">
+            <button type="submit" [formGroup]="contact" (click)="onSubmit()" class="btn btn-primary col-lg-12">
                 Submit
             </button>
             
+            
         </form>
-        <form [formGroup]="contact" (ngSubmit)="onSubmit()"></form>
     </div>
 </section>
